--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,5 +10,6 @@ dependencies = [
     "numpy>=2.2.3",
     "tiktoken>=0.9.0",
     "torch>=2.6.0",
+    "transformers>=4.49.0",
     "wandb>=0.19.8",
 ]
