--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,6 +5,7 @@ description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.12"
 dependencies = [
+    "accelerate>=1.4.0",
     "datasets>=3.3.2",
     "einops>=0.8.1",
     "numpy>=2.2.3",
