--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,9 @@ dependencies = [
     "rich>=13.9.4",
     "tiktoken>=0.9.0",
     "torch>=2.6.0",
-    "git+https://github.com/huggingface/transformers@v4.49.0-Gemma-3",
+    "transformers>=4.49.0",
     "wandb>=0.19.8",
 ]
+
+[tool.uv.sources]
+transformers = { git = "https://github.com/huggingface/transformers", rev = "v4.49.0-Gemma-3" }
