--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,3 +21,10 @@ dependencies = [
 
 [tool.uv.sources]
 transformers = { git = "https://github.com/huggingface/transformers", rev = "v4.49.0-Gemma-3" }
+
+[tool.hatch.build.targets.wheel]
+packages = ["latent_llm"]
+
+[build-system]
+requires = ["hatchling"]
+build-backend = "hatchling.build"
