--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,6 +7,7 @@ requires-python = ">=3.12"
 dependencies = [
     "accelerate>=1.4.0",
     "datasets>=3.3.2",
+    "diffusers>=0.32.2",
     "einops>=0.8.1",
     "mnemonic>=0.21",
     "nltk>=3.9.1",
